Se agrega un texto de base

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <script src="app.js"></script>
+    <h1 style="color: aqua; font-size: 50px;">
+        Este es un texto de base
+    </h1>
 </body>
 </html>
