--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <script src="app.js"></script>
+    <header>
+        Aqui inicia la cabecera
+    </header>
     <h1 style="color: aqua; font-size: 50px;">
         Este es un texto de base
     </h1>
