--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>Java Script - Fazt</title>
 </head>
 <body>
@@ -14,5 +15,7 @@
     <h1 style="color: aqua; font-size: 50px;">
         Este es un texto de base
     </h1>
+    <p class="parrafo">Este es un parrafo el cual sera modificado con css
+    </p>
 </body>
 </html>
