--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style,css">
     <title>Java Script - Fazt</title>
 </head>
-<body>
+<body class="contenido">
     <script src="app.js"></script>
     <h1 style="color: aqua; font-size: 50px;">
         Este es un texto de base
