Borrar contenido innesesario

--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Java Script - Fazt</title>
+    <title>Rapido</title>
 </head>
 <body class="contenido">
-    <script src="app.js"></script>
     <header>
         Aqui inicia la cabecera
-    </header>
-    <h1 style="color: aqua; font-size: 50px;">
+        <h1 style="color: aqua; font-size: 50px;">
         Este es un texto de base
-    </h1>
-    <p class="parrafo">Este es un parrafo el cual sera modificado con css
-    </p>
+        </h1>
+        <p class="parrafo">Este es un parrafo el cual sera modificado con css
+        </p>
+    </header>
 </body>
 </html>
