--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="contenido">
     <script src="app.js"></script>
     <header>
+        <p>Este es un parrafo antes de la cabecera</p>
         Aqui inicia la cabecera
     </header>
     <h1 style="color: aqua; font-size: 50px;">
