--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
 </head>
 <body class="contenido">
     <header>
-        <p>Este es un parrafo antes de la cabecera</p>
-        Aqui inicia la cabecera
-        <h1 style="color: aqua; font-size: 50px;">
-        Este es un texto de base
-        </h1>
-        <p class="parrafo">Este es un parrafo el cual sera modificado con css
-        </p>
+       <h1>este es un parafo de la cabecera</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, consequuntur officiis sed aperiam maxime dolor numquam at incidunt vel pariatur, illum, placeat sequi voluptatem dolorum quisquam obcaecati quis. Assumenda, nemo.</p>
     </header>
 </body>
 </html>
