Modifcacion de footer

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         <p class="parrafo">Este es un parrafo el cual sera modificado con css
         </p>
     </header>
+    <footer>
+        <!--
+            Este es un comentario, por que no me acuerdo que es un footer
+        -->
+        <p>
+            Este es una line en el footer
+        </p> 
+    </footer>
 </body>
 </html>
