--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="contenido">
     <header>
-       <h1>este es un párrafo de la cabecera</h1>
+       <h1>Este es un p&aacute;rrafo de la cabecera</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, consequuntur officiis sed aperiam maxime dolor numquam at incidunt vel pariatur, illum, placeat sequi voluptatem dolorum quisquam obcaecati quis. Assumenda, nemo.</p>
     </header>
     <footer>
