--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             Este es una linea en el footer
         </p> 
         <p>Nueva</p>
+        <p>Desde git bash</p>
     </footer>
 </body>
 </html>
